# lumea

./: .gitignore  flake.nix  lumea.cabal  readme.md  readme.org
lib/: Meta.hs  Parser.hs  Server.hs  Site.hs
site/html/: root.html  stream.html
site/html/posts/: hello-world.html
site/org/: root.org  stream.org
site/org/posts/: hello-world.org
src/: Lumea.hs  Main.hs  Server.hs
test/: MetaTest.hs  ParserTest.hs  SiteTest.hs
test/lumea-root/site/markup/dir1/dir2/: deep-file.org
test/lumea-root/site/markup/posts/: hello-world.org
test/meta-test/: markdown-expected.md  markdown-src.md
