cabal-version:      3.0
name:               Lumea

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
author:             softsun2
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    build-depends:
        base,
        pandoc, pandoc-types,
        monads-fd,
        text,
        time,
        iso8601-time,
        containers,
        yaml,
        parsec,
        filepath, directory,
        network, bytestring
    hs-source-dirs: lib
    exposed-modules: Site, Server
    default-language: Haskell2010

executable lumea
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends: base, Lumea
    default-language: Haskell2010

test-suite site-test
    type: exitcode-stdio-1.0
    main-is: SiteTest.hs
    build-depends:
        base,
        HUnit,
        monads-fd,
        time,
        Lumea,
        filepath, directory
    hs-source-dirs: test
    default-language: Haskell2010
