cabal-version:      3.0
name:               Lumea

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
author:             softsun2
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    build-depends:
        base,
        parsec,
        monads-fd,
        text,
        filepath, directory,
        network, bytestring
    hs-source-dirs: lib
    exposed-modules: Parser
    default-language: Haskell2010

executable lumea
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends: base
    default-language: Haskell2010
    other-modules: Site, Server, Parser

test-suite site-test
    type: exitcode-stdio-1.0
    main-is: SiteTest.hs
    build-depends:
        base,
        HUnit,
        Lumea,
        filepath, directory
    hs-source-dirs: test
    default-language: Haskell2010

test-suite parser-test
    type: exitcode-stdio-1.0
    main-is: ParserTest.hs
    build-depends: base, HUnit, Lumea
    hs-source-dirs: test
    default-language: Haskell2010    
